PV Localization Update - Param InfoTexts

--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -10422,4 +10422,58 @@
   <data name="M_INFO_GT_VALVES_2" xml:space="preserve">
     <value>لقد فقدت صمامات التفريغ موقعها المتبادل الآمن. أصبح المشغل الآن قادرًا على فتحها في نفس الوقت في وضع الصيانة</value>
   </data>
+  <data name="P_INFO_DISAB_SENS" xml:space="preserve">
+    <value>يمكن استخدامه مؤقتًا في حالة وجود خلل في المستشعر. عند تعطيل المستشعر، يتم إخفاء قراءته وتكون القيمة المعروضة على واجهة HMI هي القيمة التي تحتاجها العملية للإنتاج. يجب استبدال المستشعر في أقرب وقت ممكن.</value>
+  </data>
+  <data name="P_INFO_LEVEL_TEACH_1" xml:space="preserve">
+    <value>انقر فوق هذه العلامة بمجرد فحص المستوى الصحيح للمادة، وهو المستوى الذي يتوافق مع القيمة المشار إليها في المعلمة النسبية، بواسطة المستشعر. هذه هي الطريقة لتعليم المستشعر أن هذا هو المستوى المشار إليه.</value>
+  </data>
+  <data name="P_INFO_LEVEL_TEACH_2" xml:space="preserve">
+    <value>قم بتعيين قيمة الحد الأقصى للمستوى الذي يتوافق مع مستوى المادة الموجودة في الآلة ثم انقر فوق "ضبط النطاق الكامل" للحصول على هذا القياس كقيمة المستوى الأقصى. على سبيل المثال: اضبط 90% عندما يكون القادوس ممتلئًا تقريبًا، عند حوالي 90% من سعته.</value>
+  </data>
+  <data name="P_INFO_LEVEL_TEACH_3" xml:space="preserve">
+    <value>قم بتعيين قيمة المستوى الأدنى الذي يتوافق مع مستوى المادة الموجودة في الآلة ثم انقر فوق "ضبط المقياس الفارغ" للحصول على هذا المقياس كقيمة المستوى الأدنى. على سبيل المثال: اضبط 10% عندما يكون الوعاء فارغًا تقريبًا، عند حوالي 10% من سعته.</value>
+  </data>
+  <data name="P_INFO_DIS_MODUL_MTR" xml:space="preserve">
+    <value>انقر فوق هذا العلم للسماح للمحرك بالعمل بسرعة ثابتة. إذا لم يتم ضبط هذا العلم، يتم تشغيل المحرك بمنطق العملية بسرعة متغيرة مع مرور الوقت.</value>
+  </data>
+  <data name="P_INFO_PAUSE_TIME_1" xml:space="preserve">
+    <value>اضبط هنا الوقت الذي سيتم اعتباره بمثابة الإيقاف المؤقت أو وقت التوقف عن العمل للمكون ضمن وضع العمل الذي يعتمد على تسلسل التشغيل والإيقاف. إذا تم تعيين هذا الوقت على الصفر، فلن يكون للمكون الذي تتم الإشارة إليه هذه المعلمة مزيد من وقت التوقف عن العمل بسبب تسلسل التشغيل والإيقاف باستثناء الحالة التي يتم فيها تعيين وقت التشغيل على الصفر.</value>
+  </data>
+  <data name="P_INFO_ON_TIME_1" xml:space="preserve">
+    <value>قم بتعيين الوقت الذي سيتم اعتباره وقت النشاط، أو وقت التشغيل، للمكون ضمن وضع العمل الذي يعتمد على تسلسل التشغيل والإيقاف. إذا تم ضبط هذا الوقت على الصفر، فلن يكون للمكون الذي تشير إليه هذه المعلمة مزيد من وقت النشاط، مما يعني أنه سيتم إيقافه، أثناء تسلسل التشغيل والإيقاف. ملاحظة: إذا تم ضبط وقت الإيقاف المؤقت على صفر، وكان وقت التشغيل أعلى من الصفر، فسيتم توجيه المكون ليكون قيد التشغيل دائمًا ضمن تسلسل التشغيل والإيقاف.</value>
+  </data>
+  <data name="P_INFO_DIS_MODUL_VLV" xml:space="preserve">
+    <value>انقر فوق هذه العلامة للسماح بتشغيل الصمام عند مرجع ثابت. إذا لم يتم تعيين هذه العلامة، فسيتم تشغيل الصمام بمنطق العملية عند مرجع زمني متغير.</value>
+  </data>
+  <data name="P_INFO_PROP_GAIN" xml:space="preserve">
+    <value>التنظيم في مجال الفرق بين القيمة المحددة والتغذية الراجعة. أعلى هي هذه القيمة، أعلى هو تفاعل النظام قبل كل شيء عندما يزيد الفرق بين نقطة الضبط والتغذية الراجعة. ملحوظة: إذا كان هذا المكسب مرتفعًا جدًا، فقد يصبح التنظيم غير مستقر. وإذا كان منخفضًا للغاية، فإن التنظيم سيكون ضعيفًا للغاية، لكنه من المحتمل ألا يكون كافيًا لدفع الناتج بما يكفي للوصول إلى الهدف المنشود.</value>
+  </data>
+  <data name="P_INFO_INTGR_SMP_TIME" xml:space="preserve">
+    <value>أعلى هي هذه القيمة، وأبطأ هو تفاعل النظام. هذه المرة هي التي تستخدمها معلمة الكسب التكاملي للعمل معها. عينة واحدة تنجح في العينة التالية بشكل مستمر.</value>
+  </data>
+  <data name="P_INFO_INTGR_GAIN" xml:space="preserve">
+    <value>التنظيم في المجال الزمني. أعلى هي هذه القيمة، أعلى هو تفاعل النظام عندما ينتهي وقت العينة المتكاملة. ملاحظة: إذا كان هذا المكسب مرتفعًا جدًا، فقد تصبح اللائحة غير قادرة على الاستجابة للتغير السريع في الملاحظات. وإذا كان منخفضا للغاية، فإن التنظيم سيكون أكثر سرعة ولكنه من المحتمل ألا يكون كافيا لدفع الناتج بما يكفي للوصول إلى الهدف المنشود. إذا تم تعيين هذا الكسب على الصفر، فلن يتم تنفيذ أي تنظيم في المجال الزمني.</value>
+  </data>
+  <data name="P_INFO_ACT_PI_OUT" xml:space="preserve">
+    <value>سيتم استخدام مخرجات التنظيم الفعلية كتصحيح أو تشخيص أو لتقييم المعلمات المناسبة لمعلمات التنظيم التي يجب تعيينها بالنظر إلى السلوك العام للنظام.</value>
+  </data>
+  <data name="P_INFO_ANTICAV_1" xml:space="preserve">
+    <value>تقوم المضخة بتقليل سرعتها بشكل دوري لفترة قصيرة (على سبيل المثال: -5% لمدة 3 ثواني) بهدف منع التجويف. تمثل هذه المعلمة الوقت بين الانخفاض القصير في السرعة والسرعة التالية. إذا تم ضبطه على الصفر، فلن يتم خفض السرعة.</value>
+  </data>
+  <data name="P_INFO_ANTICAV_2" xml:space="preserve">
+    <value>تقوم المضخة بتقليل سرعتها إلى قيمة "السرعة المنخفضة للحد الأدنى من التيار - نقطة الضبط" للوقت "السرعة المنخفضة للحد الأدنى من التيار - المدة" من أجل حل التجويف الجاري (والذي يتم التعرف عليه من خلال خفض التيار إلى ما دون الحد المحدد في HMI الخاص بـ "الحد الأدنى للتيار"). إذا نجح إجراء مكافحة التجويف في مقاطعة التجويف، تعود المضخة إلى سرعة العملية دون أي إشارة عالمية. بخلاف ذلك، عند استعادة سرعة العملية، يتم إنشاء إنذار "تيار المحرك أقل من الحد الأدنى للنطاق - تجويف محتمل". في هذه الحالة، لن يحاول النظام إزالة تجويف المضخة تلقائيًا مرة أخرى منذ فشل المحاولة الأولى، ولكنه سيرجع إلى المشغل لمراجعة المعلمات أو لاتخاذ إجراءات أخرى. إذا تم ضبط المدة على الصفر، فلن يتم إجراء عملية إزالة التجويف في حالة الحد الأدنى لتيار المضخة.</value>
+  </data>
+  <data name="P_INFO_MICROF_1" xml:space="preserve">
+    <value>في بداية الإنتاج، من الممكن تفعيل "التنظيف الخاص" الذي ينبغي أن يكون أكثر كثافة من الآخرين التاليين من أجل إذابة أي بقايا صلبة محتملة على شبكة الفلتر. يمكن تحديد مدتها بواسطة هذه المعلمة.</value>
+  </data>
+  <data name="P_INFO_MICROF_2" xml:space="preserve">
+    <value>في نهاية الإنتاج (دورة التوقف) من الممكن تقليل وقت التوقف بين عملية التنظيف والأخرى من أجل تكثيف تأثير الماء على الشبكة ومنع تجمد البقايا أثناء فترة توقف الخط.</value>
+  </data>
+  <data name="P_INFO_MIN_LEV_BYPS" xml:space="preserve">
+    <value>انقر فوق هذه العلامة لاختبار دوران المضخة في حالة عدم وجود حد أدنى للمستوى. في هذه الحالة، سيتم السماح للمضخة بالعمل لبضع ثوان دون الحد الأدنى من المستوى بهدف فحص الدوران فقط. تتم إعادة ضبط هذا العلم تلقائيًا بمجرد أن تبدأ المضخة في التحرك.</value>
+  </data>
+  <data name="P_INFO_MTR_NOM_AMP" xml:space="preserve">
+    <value>اضبط هنا التيار الاسمي للمحرك. يمكن تحقيق هذه القيمة على ملصق المحرك (المشار إليه بجهد المحرك المناسب) من أجل تمثيل القياس الأكثر دقة لقيمة النسبة المئوية الحالية في عرض HMI.</value>
+  </data>
 </root>
