--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -10422,4 +10422,58 @@
   <data name="M_INFO_GT_VALVES_2" xml:space="preserve">
     <value>שסתומי פריקה איבדו את מיקומם ההדדי נעילות מאובטחות. המפעיל מסוגל כעת לפתוח אותם באותו זמן במצב תחזוקה</value>
   </data>
+  <data name="P_INFO_DISAB_SENS" xml:space="preserve">
+    <value>ניתן להשתמש בו באופן זמני במקרה של תקלה בחיישן. כאשר החיישן מושבת, הקריאה שלו מוסווה והערך המוצג ב-HMI הוא הערך שהתהליך צריך לייצור. יש להחליף את החיישן בהקדם האפשרי.</value>
+  </data>
+  <data name="P_INFO_LEVEL_TEACH_1" xml:space="preserve">
+    <value>לחץ על דגל זה פעם אחת שהרמה הנכונה של החומר, כלומר זו שתואמת את הערך המצוין בפרמטר היחסי, נסרקת על ידי החיישן. זו הדרך ללמד את החיישן שזו הרמה המצוינת.</value>
+  </data>
+  <data name="P_INFO_LEVEL_TEACH_2" xml:space="preserve">
+    <value>הגדר את הערך של הרמה המקסימלית התואמת את רמת החומר במכונה ולאחר מכן לחץ על "הגדר קנה מידה מלא" כדי להשיג מידה זו כערך של רמה מקסימלית. לדוגמה: הגדר 90% כאשר ההופר כמעט מלא, בערך ב-90% מהקיבולת שלו.</value>
+  </data>
+  <data name="P_INFO_LEVEL_TEACH_3" xml:space="preserve">
+    <value>הגדר את הערך של הרמה המינימלית התואמת לרמת החומר במכונה ולאחר מכן לחץ על "הגדר קנה מידה ריק" כדי להשיג מידה זו כערך של רמה מינימלית. לדוגמה: הגדר 10% כאשר ההופר כמעט ריק, בערך ב-10% מהקיבולת שלו.</value>
+  </data>
+  <data name="P_INFO_DIS_MODUL_MTR" xml:space="preserve">
+    <value>לחץ על דגל זה כדי לאפשר למנוע לפעול במהירות קבועה. אם הדגל הזה לא מוגדר, המנוע מונע על ידי ההיגיון של התהליך במהירות משתנה בזמן.</value>
+  </data>
+  <data name="P_INFO_PAUSE_TIME_1" xml:space="preserve">
+    <value>הגדר כאן את הזמן שייחשב כהשהייה, או זמן השבתה, של הרכיב במצב עבודה המבוסס על רצף ON-OFF. אם הזמן הזה מוגדר לאפס, הרכיב שאליו מתייחס הפרמנטר הזה, לא יהיה יותר זמן השבתה עקב רצף ה-ON-OFF, מלבד מקרה אפילו זמן ON מוגדר לאפס.</value>
+  </data>
+  <data name="P_INFO_ON_TIME_1" xml:space="preserve">
+    <value>הגדר כאן את הזמן שייחשב כזמן הפעילות, או זמן הריצה, של הרכיב במצב עבודה המבוסס על רצף ON-OFF. אם הזמן הזה מוגדר לאפס, הרכיב שאליו מתייחס הפרמנטר הזה, לא יהיה יותר זמן פעילות, כלומר הוא יופסק במהלך רצף ההפעלה-כיבוי. הערה: אם זמן ההשהיה מוגדר לאפס, וזמן ההפעלה הוא מעל אפס, הרכיב מקבל פקודה להיות מופעל תמיד בתוך רצף ההפעלה-כיבוי.</value>
+  </data>
+  <data name="P_INFO_DIS_MODUL_VLV" xml:space="preserve">
+    <value>לחץ על דגל זה כדי לאפשר לשסתום לפעול בהתייחסות קבועה. אם הדגל הזה לא מוגדר, השסתום מונע על ידי ההיגיון של התהליך בהתייחסות משתנה בזמן.</value>
+  </data>
+  <data name="P_INFO_PROP_GAIN" xml:space="preserve">
+    <value>רגולציה בתחום ההבדל בין ערך מוגדר למשוב. גבוה יותר הערך הזה, גבוה יותר התגובתיות של המערכת מעל הכל כשההבדל בין נקודת הגדר למשוב גדל. הערה: אם הרווח הזה גבוה מדי, הרגולציה עלולה להפוך לבלתי יציבה. אם היא נמוכה מדי, הרגולציה תהיה מאוד סבילה אבל פוטנציאלית לא מספיקה כדי לדחוף את הפלט מספיק כדי להגיע ליעד הרצוי.</value>
+  </data>
+  <data name="P_INFO_INTGR_SMP_TIME" xml:space="preserve">
+    <value>ערך זה גבוה יותר, התגובתיות של המערכת איטית יותר. הזמן הזה הוא זה שמשמש את פרמטר הרווח האינטגרלי לעבוד איתו. דגימה אחת מוצלחת על ידי הבא ברציפות.</value>
+  </data>
+  <data name="P_INFO_INTGR_GAIN" xml:space="preserve">
+    <value>תחום רגולציה בזמן. גבוה יותר ערך זה, גבוה יותר התגובתיות של המערכת בכל פעם שפג זמן הדגימה האינטגרלית. הערה: אם הרווח הזה גבוה מדי, הרגולציה עלולה להיות לא מסוגלת להגיב לשינוי מהיר של משוב. אם זה נמוך מדי, הרגולציה תהיה יותר קלילה אבל פוטנציאלית לא מספיקה כדי לדחוף את הפלט מספיק כדי להגיע ליעד הרצוי. אם רווח זה מוגדר לאפס, לא מתבצעת תקנון בזמן.</value>
+  </data>
+  <data name="P_INFO_ACT_PI_OUT" xml:space="preserve">
+    <value>פלט רגולציה בפועל שישמש כניפוי באגים או אבחון או כדי להעריך את הפרמטריזציה הנכונה של פרמטרי הרגולציה שיש להגדיר בהסתכלות על ההתנהגות הכוללת של המערכת.</value>
+  </data>
+  <data name="P_INFO_ANTICAV_1" xml:space="preserve">
+    <value>המשאבה מפחיתה באופן מחזורי את מהירותה לזמן קצר (למשל: -5% למשך 3 שניות) במטרה למנוע קוויטציה. פרמטר זה מייצג את הזמן שבין ירידה קצרה במהירות אחת לשנייה הבאה. אם הוא מוגדר לאפס, לא מבוצעת הורדת מהירות.</value>
+  </data>
+  <data name="P_INFO_ANTICAV_2" xml:space="preserve">
+    <value>המשאבה מורידה את מהירותה לערך של "מהירות נמוכה יותר עבור זרם מינימלי - נקודת קבע" למשך הזמן "מהירות נמוכה יותר עבור זרם מינימלי - משך זמן" על מנת לפתור את הקוויטציה בתהליך (אשר מזוהה על ידי הורדת הזרם מתחת לגבול שנקבע ב-HMI של "זרם מינימלי"). אם הליך האנטי-קוויטציה מצליח לקטוע את הקוויטציה, המשאבה חוזרת למהירות התהליך ללא כל אות גלובלי. אחרת, כאשר מהירות התהליך משוחזרת, נוצרת האזעקה "זרם מנוע מתחת למגבלת הטווח המינימלי - קיוויציה אפשרית". במקרה זה, המערכת לא תנסה לבצע ביטול אוטומטי של המשאבה שוב מאז הניסיון הראשון נכשל, אלא תפנה למפעיל לבדיקת הפרמטרים או לפעולות אחרות. אם משך הזמן מוגדר לאפס, לא מבוצע דה-קוויטציה במקרה של זרם מינימלי של משאבה.</value>
+  </data>
+  <data name="P_INFO_MICROF_1" xml:space="preserve">
+    <value>בתחילת הייצור אפשר להפעיל "ניקוי מיוחד" שאמור להיות אינטנסיבי יותר מהאחרים הבאים על מנת להמיס כל שאריות מוצקות אפשריות ברשת הסינון. ניתן לקבוע את משך הזמן לפי פרמטר זה.</value>
+  </data>
+  <data name="P_INFO_MICROF_2" xml:space="preserve">
+    <value>בסיום הייצור (מחזור עצירה) ניתן להפחית את זמן ההשהיה בין ניקוי אחד למשנהו על מנת להעצים את השפעת המים על הרשת ולמנוע התמצקות של שאריות בזמן ההשבתה של הקו.</value>
+  </data>
+  <data name="P_INFO_MIN_LEV_BYPS" xml:space="preserve">
+    <value>לחץ על דגל זה כדי לבדוק את סיבוב המשאבה במקרה שאין רמה מינימלית. במקרה זה, המשאבה יורשה לפעול במשך כמה שניות ללא רמה מינימלית רק במטרה של בדיקת סיבוב. דגל זה מאופס אוטומטית ברגע שהמשאבה מתחילה לנוע.</value>
+  </data>
+  <data name="P_INFO_MTR_NOM_AMP" xml:space="preserve">
+    <value>הגדר כאן את הזרם הנומינלי של המנוע. ניתן להשיג ערך זה על תווית המנוע (זו המצוינת במתח המנוע המתאים) על מנת לייצג את המידה המדויקת ביותר של הערך הנוכחי באחוזים בתצוגת HMI.</value>
+  </data>
 </root>
